musik.html aktualisieren

--- a/musik.html
+++ b/musik.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Musik – Dr. Gray & Mrs. Dr. Gray</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
+  <style>
+    .track-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+      padding: 2rem;
+    }
+
+    .track-item iframe {
+      width: 100%;
+      height: 300px;
+      border: none;
+    }
+  </style>
 </head>
 <body>
   <header class="main-header">
@@ -12,7 +26,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="bio.html">Bio</a></li>
-        <li><a href="musik.html" class="active">Musik</a></li>
+        <li><a href="musik.html">Musik</a></li>
         <li><a href="videos.html">Videos</a></li>
         <li><a href="shop.html">Shop</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
@@ -20,52 +34,56 @@
     </nav>
   </header>
 
-  <section class="music-heading">
-    <div class="music-header-container">
-      <img src="assets/images/drgray-logo-small.png" alt="Dr. Gray Logo" class="logo-small left">
-      <h1 class="golden-heading">Musik – Dr. Gray &amp; Mrs. Dr. Gray</h1>
-      <img src="assets/images/mrsdrgray-logo-small.png" alt="Mrs. Dr. Gray Logo" class="logo-small right">
+  <section class="hero">
+    <div class="hero-text">
+      <h1>Musik-Playlist</h1>
+      <p>Erlebe den Sound von Dr. Gray & Mrs. Dr. Gray – feinster Techno, Leidenschaft & Energie.</p>
     </div>
   </section>
 
-  <section class="music-intro">
-    <h2>🎵 Techno mit Gefühl</h2>
-    <p>
-      Willkommen in unserer Klangwelt. Hier findest du ausgewählte Sets und Mixes, 
-      die wir persönlich kuratiert haben. Performances im Herzen: Deep, Melodic, Progressive – 
-      alles mit Feeling und Tiefe.
-    </p>
-  </section>
-
-  <section class="music-sets-grid">
-    <!-- Test mit drei Sets -->
-    <div class="set-item">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2168299668&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
-      </iframe>
-      <p>Track 1</p>
+  <section class="track-grid">
+    <!-- SoundCloud Embeds (Beispielhafte 3) -->
+    <div class="track-item">
+      <iframe scrolling="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2126060061&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&visual=true"></iframe>
     </div>
-    <div class="set-item">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2168299668&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
-      </iframe>
-      <p>Track 2</p>
+    <div class="track-item">
+      <iframe scrolling="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2008790983&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&visual=true"></iframe>
     </div>
-    <div class="set-item">
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2168299668&color=%23ff5500&auto_play=false&hide_related=false&show_user=true&show_reposts=false&visual=true">
-      </iframe>
-      <p>Track 3</p>
+    <div class="track-item">
+      <iframe scrolling="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2032581476&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&visual=true"></iframe>
+    </div>
+    <div class="track-item">
+      <iframe scrolling="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2173521759&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&visual=true"></iframe>
+    </div>
+    <div class="track-item">
+      <iframe scrolling="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2112398340&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&visual=true"></iframe>
+    </div>
+    <div class="track-item">
+      <iframe scrolling="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2168299668&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&visual=true"></iframe>
+    </div>
+    <div class="track-item">
+      <iframe scrolling="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1959994003&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&visual=true"></iframe>
+    </div>
+    <div class="track-item">
+      <iframe scrolling="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2113662411&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&visual=true"></iframe>
+    </div>
+    <div class="track-item">
+      <iframe scrolling="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2168266476&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&visual=true"></iframe>
+    </div>
+    <div class="track-item">
+      <iframe scrolling="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2120920662&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&visual=true"></iframe>
+    </div>
+    <div class="track-item">
+      <iframe scrolling="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2184511415&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&visual=true"></iframe>
+    </div>
+    <div class="track-item">
+      <iframe scrolling="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1909849949&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&visual=true"></iframe>
     </div>
   </section>
 
   <footer class="social-footer">
     <p>&copy; 2025 Dr. Gray & Mrs. Dr. Gray – All rights reserved.</p>
-    <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank">TikTok Dr. Gray</a>
-    <a href="https://www.tiktok.com/@ktina1986" target="_blank">TikTok Mrs. Dr. Gray</a>
-    <a href="https://soundcloud.com/drgray_sic" target="_blank">SoundCloud</a>
+    <a href="https://soundcloud.com/drgray_sic" target="_blank">Mehr auf SoundCloud</a>
   </footer>
-
-  <script src="main.js"></script>
 </body>
 </html>
