--- a/musik.html
+++ b/musik.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="bio.html">Bio</a></li>
-        <li><a href="musik.html" class="active">Musik</a></li>
+        <li><a href="musik.html">Musik</a></li>
         <li><a href="videos.html">Videos</a></li>
         <li><a href="shop.html">Shop</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
@@ -21,54 +21,59 @@
     </nav>
   </header>
 
-  <section class="hero">
+  <section class="hero music-hero">
     <div class="hero-text">
-      <div class="logo-row">
-        <img src="assets/images/logo-drgray.png" alt="Dr. Gray Logo" class="hero-logo" />
-        <h1>Musik von Dr. Gray & Mrs. Dr. Gray</h1>
-        <img src="assets/images/logo-mrsdrgray.png" alt="Mrs. Dr. Gray Logo" class="hero-logo" />
-      </div>
-      <p class="hero-sub">Gefühlvolle, treibende Techno-Sets – live, ehrlich & aus der Seele.</p>
-    </div>
-  </section>
-
-  <section class="music-intro">
-    <div class="container">
-      <h2>🎶 Unsere Sets</h2>
+      <h1>🎧 Musik – Dr. Gray & Mrs. Dr. Gray</h1>
       <p>
-        Willkommen in unserer musikalischen Welt – hier findest du eine Auswahl an exklusiven Livesets,
-        gefüllt mit treibendem Techno, emotionalen Breaks und viel Gefühl. Jedes Set erzählt eine eigene Geschichte –
-        von Momenten aus TikTok-Lives bis zu deepen Sessions im Studio.
+        Willkommen in unserer Soundwelt.<br />
+        Von harten Basslines bis zu melodischen Techno-Vibes – jedes Set ist einzigartig.  
+        Hier findest du unsere aktuellen Live-Mixes & Releases direkt eingebettet – zum Durchklicken, Abtauchen und Fühlen.
       </p>
-      <p><strong>▶ Direkt anhören oder <a href="https://soundcloud.com/drgray_sic" target="_blank">mehr auf SoundCloud</a></strong></p>
     </div>
   </section>
 
   <section class="music-grid">
-    <div class="container">
+    <!-- 1 -->
+    <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2126060061&color=%23ff5500&auto_play=false&visual=true" frameborder="no" scrolling="no" allow="autoplay"></iframe>
 
-      <!-- SoundCloud Players Grid -->
-      <div class="grid-players">
-        <!-- Füge hier deine iFrames ein -->
-        <!-- Beispiel -->
-        <div class="player">
-          <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2126060061&color=%23ffd700&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&visual=true">
-          </iframe>
-        </div>
+    <!-- 2 -->
+    <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2008790983&color=%23ff5500&auto_play=false&visual=true" frameborder="no" scrolling="no" allow="autoplay"></iframe>
 
-        <!-- 11 weitere iFrames hier einfügen (du hast sie ja bereits gesammelt) -->
+    <!-- 3 -->
+    <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2032581476&color=%23ff5500&auto_play=false&visual=true" frameborder="no" scrolling="no" allow="autoplay"></iframe>
 
-      </div>
+    <!-- 4 -->
+    <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2173521759&color=%23ff5500&auto_play=false&visual=true" frameborder="no" scrolling="no" allow="autoplay"></iframe>
 
-    </div>
+    <!-- 5 -->
+    <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2112398340&color=%23ff5500&auto_play=false&visual=true" frameborder="no" scrolling="no" allow="autoplay"></iframe>
+
+    <!-- 6 -->
+    <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2168299668&color=%23ff5500&auto_play=false&visual=true" frameborder="no" scrolling="no" allow="autoplay"></iframe>
+
+    <!-- 7 -->
+    <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1959994003&color=%23ff5500&auto_play=false&visual=true" frameborder="no" scrolling="no" allow="autoplay"></iframe>
+
+    <!-- 8 -->
+    <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2113662411&color=%23ff5500&auto_play=false&visual=true" frameborder="no" scrolling="no" allow="autoplay"></iframe>
+
+    <!-- 9 -->
+    <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2168266476&color=%23ff5500&auto_play=false&visual=true" frameborder="no" scrolling="no" allow="autoplay"></iframe>
+
+    <!-- 10 -->
+    <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2120920662&color=%23ff5500&auto_play=false&visual=true" frameborder="no" scrolling="no" allow="autoplay"></iframe>
+
+    <!-- 11 -->
+    <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2184511415&color=%23ff5500&auto_play=false&visual=true" frameborder="no" scrolling="no" allow="autoplay"></iframe>
+
+    <!-- 12 -->
+    <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1909849949&color=%23ff5500&auto_play=false&visual=true" frameborder="no" scrolling="no" allow="autoplay"></iframe>
   </section>
 
   <footer class="social-footer">
-    <p>&copy; 2025 Dr. Gray & Mrs. Dr. Gray – All rights reserved.</p>
-    <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank">TikTok Dr. Gray</a>
-    <a href="https://www.tiktok.com/@ktina1986" target="_blank">TikTok Mrs. Dr. Gray</a>
-    <a href="https://soundcloud.com/drgray_sic" target="_blank">SoundCloud</a>
+    <p>&copy; 2025 Dr. Gray & Mrs. Dr. Gray</p>
+    <a href="https://soundcloud.com/drgray_sic" target="_blank">🎵 SoundCloud</a>
+    <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank">🎥 TikTok</a>
   </footer>
 
 </body>
