musik.html aktualisieren

--- a/musik.html
+++ b/musik.html
@@ -48,7 +48,7 @@
     <p>
       Unsere Musik ist mehr als Klang – sie ist Ausdruck unseres Lebens, unserer Liebe und unserer kreativen Einheit.
       Von deepen Techno-Vibes bis zu emotional geladenen B2B-Sets mit kraftvollen Drops. Alles, was du hier hörst,
-      stammt direkt aus dem Herzen – live gespielt, mit dir geteilt.
+      stammt direkt aus dem Herzen – live gespielt, mit dir geteilt 🔥
     </p>
   </section>
 
