index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home – Dr. Gray & Mrs. Dr. Gray</title>
+  <title>Dr. Gray & Mrs. Dr. Gray</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="main-header">
     <nav class="main-nav">
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="bio.html">Bio</a></li>
         <li><a href="musik.html">Musik</a></li>
         <li><a href="videos.html">Videos</a></li>
@@ -23,22 +23,14 @@
   <section class="hero">
     <div class="hero-text">
       <h1>Dr. Gray & Mrs. Dr. Gray</h1>
-      <p>Techno mit Seele – aus Liebe geboren.</p>
-      <h3 style="color: gold; margin-top: 1rem;">🎥 LIVE auf TikTok: <strong>Freitag 10.10.2025 ab 20 Uhr</strong></h3>
+      <p>Feinster Techno mit Herz und Seele – aus Liebe zur Musik.</p>
     </div>
   </section>
 
-  <section style="padding: 2rem 1rem; background-color: #111; color: #ccc; text-align: center;">
-    <h2 style="color: gold; font-family: 'Playfair Display', serif; font-size: 2rem;">🎵 Unser Sound</h2>
-    <p style="max-width: 800px; margin: auto; font-size: 1.1rem;">
-      Dr. Gray & Mrs. Dr. Gray stehen für treibenden, melodischen und emotionalen Techno.  
-      Ihr Sound vereint <strong>Drumcode Power</strong>, <strong>Peaktime-Energie</strong> und <strong>hypnotische Basslines</strong>,  
-      die Körper und Seele bewegen. 
-      <br /><br />
-      Ob <strong>Progressive, Goa oder Psy</strong> – wenn die Nacht danach verlangt, spielen sie das, was passt.  
-      Jeder Track erzählt eine Geschichte. Jeder Drop ist ein Gefühl.
-      <br /><br />
-      <span style="color: gold; font-weight: bold;">WE LIVE TECHNO – WE LOVE MUSIC.</span>
+  <section class="intro">
+    <h2>Live Zeiten</h2>
+    <p>Jeden Dienstag, Freitag  live auf TikTok:<br>
+      <strong>ab 20:00 Uhr</strong> – Feel the Beat. Join the Vibe.
     </p>
   </section>
 
@@ -48,6 +40,5 @@
     <a href="https://www.tiktok.com/@ktina1986" target="_blank">TikTok Mrs. Dr. Gray</a>
     <a href="https://soundcloud.com/drgray_sic" target="_blank">SoundCloud</a>
   </footer>
-  <script src="main.js"></script>
 </body>
 </html>
