index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
   <section class="intro">
     <h2>Live Zeiten</h2>
-    <p>Jeden Dienstag, Freitag  live auf TikTok:<br>
-      <strong>ab 20:00 Uhr</strong> – Feel the Beat. Join the Vibe.
+    <p>🕒 Freitag 10.10.2025 ab 20:00 Uhr – Live aus dem Studio<br>
+      <strong></strong> – Feel the Beat. Join the Vibe.
     </p>
   </section>
 
