index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dr. Gray & Mrs. Dr. Gray</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Dr. Gray & Mrs. Dr. Gray – Home</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Logos bitte so benennen/ablegen: assets/images/logo-left.png, assets/images/logo-right.png -->
 </head>
 <body>
+
+  <!-- Fixiertes Menü -->
   <header class="main-header">
     <nav class="main-nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
         <li><a href="bio.html">Bio</a></li>
         <li><a href="musik.html">Musik</a></li>
         <li><a href="videos.html">Videos</a></li>
@@ -20,25 +23,54 @@
     </nav>
   </header>
 
+  <!-- Live-Banner über dem Hero (deutlich sichtbar) -->
+  <div class="live-banner">
+    🔴 Jeden <strong>Freitag</strong> ab ca. <strong>20:00 Uhr</strong> – Live auf TikTok:
+    <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank" rel="noopener">@dr.gray.sic</a>
+  </div>
+
+  <!-- Hero mit FLX10 als Hintergrund -->
   <section class="hero">
     <div class="hero-text">
-      <h1>Dr. Gray & Mrs. Dr. Gray</h1>
-      <p>Feinster Techno mit Herz und Seele – aus Liebe zur Musik.</p>
+      <div class="brand-row">
+        <img src="assets/images/logo1.png" alt="Logo Dr. Gray" class="logo-small" />
+        <h1>Dr. Gray &amp; Mrs. Dr. Gray</h1>
+        <img src="assets/images/logo2.png" alt="Logo Mrs. Dr. Gray" class="logo-small" />
+      </div>
+      <p>Feinster Techno mit Herz &amp; Seele – aus Liebe zur Musik.</p>
+      <div class="cta-buttons">
+        <a href="musik.html" class="btn">Zu den Sets</a>
+        <a href="shop.html" class="btn btn-outline">Zum Shop</a>
+      </div>
     </div>
   </section>
 
+  <!-- Kurzintro + Streamingzeiten nochmal im Content -->
   <section class="intro">
-    <h2>Live Zeiten</h2>
-    <p>🕒 Freitag 10.10.2025 ab 20:00 Uhr – Live aus dem Studio<br>
-      <strong></strong> – Feel the Beat. Join the Vibe.
+    <h2>Live &amp; Vibes</h2>
+    <p>
+      Wir spielen melodischen bis treibenden Techno – live gemixt, roh und emotional.
+      Folge uns für Live-Sessions jeden <strong>Freitag ab ca. 20:00</strong> auf TikTok.
+    </p>
+  </section>
+
+  <!-- Optional: 3er Vorschau (kannst du später befüllen oder entfernen) -->
+  <section class="music-preview">
+    <h3>Frisch auf SoundCloud</h3>
+    <div class="music-grid">
+      <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2126060061&color=%23ffd700&auto_play=false&visual=true" frameborder="0" allow="autoplay"></iframe>
+      <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2168299668&color=%23ffd700&auto_play=false&visual=true" frameborder="0" allow="autoplay"></iframe>
+      <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/2008790983&color=%23ffd700&auto_play=false&visual=true" frameborder="0" allow="autoplay"></iframe>
+    </div>
+    <p class="center">
+      <a class="btn btn-outline" href="musik.html">Mehr Musik anhören →</a>
     </p>
   </section>
 
   <footer class="social-footer">
-    <p>&copy; 2025 Dr. Gray & Mrs. Dr. Gray – All rights reserved.</p>
-    <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank">TikTok Dr. Gray</a>
-    <a href="https://www.tiktok.com/@ktina1986" target="_blank">TikTok Mrs. Dr. Gray</a>
-    <a href="https://soundcloud.com/drgray_sic" target="_blank">SoundCloud</a>
+    <p>&copy; 2025 Dr. Gray &amp; Mrs. Dr. Gray</p>
+    <a href="https://soundcloud.com/drgray_sic" target="_blank" rel="noopener">SoundCloud</a>
+    <a href="https://www.tiktok.com/@dr.gray.sic" target="_blank" rel="noopener">TikTok</a>
   </footer>
 </body>
 </html>
